2011-07-17  Araki Ken  <arakiken@users.sf.net>

	* README, README.ja, gtk/INSTALL, man/mlterm.1: Updated

	* gtk/Makefile.in: Set valid value to SYSCONFDIR macro in CFLAGS.
	
	* cairo is supported for type_engine option.
	  - x_window.[ch]:
	    x_window_xft_draw_string{8|32} => x_window_fc_draw_string{8|12}.
	    x_window_set_use_cairo() is added.
	  - x_font.[ch]: cairo_calculate_char_width() and cairo_font_open() are
	    implemented.
	  - mc_font.c, mc_flags.[ch]: "cairo" checkbox is added.
	  - configure.in: --with-type-engines option accepts "cairo" as value.
	  - doc/en/README.cairo: Added.

	* x_font_config.c: The way of searching shared font tables in
	  create_shared_font_config() and x_release_font_config() is fixed.

	* ml_char_encoding.[ch]:
	  ml_convert_to_ucs4, ml_use_cp932_ucs_for_xft and ml_convert_to_xft_ucs4,
	  are moved to x_font.c

	* x_type_engine.c: Added

2011-07-12  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - If command is not NULL and argv is NULL, argv(= {command,NULL})
	    is allocated in vte_terminal_fork_command().
	  - If name is NULL, "monospace" font is loaded in
	    vte_terminal_set_font_from_string().

	* mlconfig/main.c: "Indic" checkbox is selectable only if "Bidi(UTF8 only)"
	  checkbox is not selected.

	* version.h.in: 3.0.5 post -> 3.0.6 pre

	* vte.c: gtk_style_{attach|detach}() and gdk_window_set_user_data() are
	  not called.

	* README: Updated

2011-07-04  Araki Ken  <arakiken@users.sf.net>

	* vte.c: If command and argv arguments of vte_terminal_fork_command()
	  is NULL, default shell is executed in child process.

	* x_gdiobj_pool.h: Include <kiklib/kik_types.h>.
 
	* README.ja, gtk/INSTALL: Updated.

2011-07-02  Araki Ken  <arakiken@users.sf.net>

	* x_sb_view.h, x_win32.h: Independent from kik_types.h.

	* libind/lex.split.c: Added. (generated by lex)

	* im_kbd.c: If opt is NULL or not is checked before calling
	  ml_get_char_encoding(opt) in im_kbd_new().

	* x_font_win32.c: Fixed cs_info_table.
