@@ -1,14 +1,13 @@
 ver 3.0.6
 * Support cairo for text rendering. (Experimental)
-  (Execute configure with "--type-engines=cairo,..." option , then start
-  mlterm with "-type cairo" option.)
+  (See doc/en/README.cairo in detail.)
 * Support unicode indic characters (using ISCII fonts though).
 * Support searching text in terminal screen. (Add "mlsearch.sh" tool.)
 * "CSI < r", "CSI < s" and "CSI < t" sequences are supported.
 * Improve cursor movement in bi-direction text.
 * Improve compatibility of libvte. (Gtkterm2, evilvte and sakura work.)
 * Other bug fixes:
-  Fix a mistake that files in $prefix/etc/mlterm aren't refered in libvte.
+  Fix a mistake which disabled configuration in $prefix/etc/mlterm in libvte.
 
 ver 3.0.5
 * Fix a problem of failing in compilation in gtk/ in the system where
